--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </div>
     <!--    hero join community-->
     <div class="container my-5">
-        <div class="p-5 text-center bg-body-tertiary rounded-3">
-            <img alt="logo" height="80vh" src="./assets/ilearning_logo.png" width="80vw">
+        <div class="p-5 text-center bg-body-tertiary rounded-3 ">
+            <img alt="logo" class="ilearning" height="100vh" src="./assets/ilearning_logo.png" width="100vw">
             <h1 class="text-body-emphasis">JOIN OUR MEETUP COMMUNITY</h1>
             <ul>
                 <li class="list-unstyled">Get updated about the latest technology webinars i.e. <code>AI, DevOps,
@@ -87,7 +87,7 @@
     </div>
     <!--footer-->
     <div class="container">
-        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-4 py-5 pb-1 my-5 mb-1 border-top">
+        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-4 py-5 pb-1 my-0 mb-1 ">
 
             <div class="col mb-3">
                 <h5>TRENDING CERTIFICATION COURSES</h5>
