--- a/index.html
+++ b/index.html
@@ -95,17 +95,16 @@
                     <div class="mt-0 p-0">
                         <img alt="image" class="faq-img" height="150vh" src="./assets/Talk%20To%20Us.png" width="auto">
                     </div>
-                    <form action="/submit" class="d-flex flex-column contact form-action" id="myForm" method="post">
+                    <form action="" class="d-flex flex-column contact form-action" id="myForm">
                         <label for="name">Name:</label>
-                        <input id="name" name="name" placeholder="Full Name*" required type="text"><span
-                            class="error" id="usernameError"></span>
+                        <input id="name" name="name" placeholder="Full Name*" required type="text">
+                        <span class="error" id="usernameError"></span>
                         <label for="email">Email:</label>
-                        <input id="email" name="email" placeholder="Email*" required type="email"> <span class="error"
-                                                                                                         id="emailError"></span>
+                        <input id="email" name="email" placeholder="Email*" required type="email">
+                        <span class="error" id="emailError"></span>
                         <label for="contact">Contact:</label>
-                        <input id="contact" name="contact" placeholder="Mobile Number*" required type="number"><span
-                            class="error"
-                            id="contacterror"></span>
+                        <input id="contact" name="contact" placeholder="Mobile Number*" required type="number">
+                        <span class="error" id="contactError"></span>
                         <button id="submit" type="submit">Submit</button>
                     </form>
                     <div class="d-flex align-items-start"><label for="checkbox"></label><input
