--- a/index.html
+++ b/index.html
@@ -14,29 +14,37 @@
 <main>
 
     <!--header-->
-    <div class="container header header2">
-
-
-        <header class="d-flex justify-content-between py-3">
-            <a class="d-flex align-items-center" href="/">
-                <img alt="logo" class="bi" height="39" role="img" src="assets/ilearning_logo.png" width="49"/>
-            </a>
-            <div class="d-flex align-item-left">
-                <ul class="nav nav-pills">
-                    <li class="nav-item"><a class="nav-link text-white fw-semibold" href="#">Corporate Training</a></li>
-                    <li class="nav-item"><a class="nav-link text-white fw-semibold" href="#">Explore Courses</a></li>
-                    <li class="nav-item"><a class="nav-link text-white fw-semibold" href="#">Blog</a></li>
+    <nav class="navbar navbar-expand-lg" data-bs-theme="light"
+         style="background:linear-gradient(90deg, white, #228ce3)">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img alt="logo" class="bi" height="39" role="img"
+                                                  src="assets/ilearning_logo.png" width="49"/></a>
+            <button aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation"
+                    class="navbar-toggler"
+                    data-bs-target="#navbarColor03" data-bs-toggle="collapse" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarColor03">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a aria-current="page" class="nav-link fw-semibold" href="#">Corporate Training</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-semibold" href="#">Explore Courses</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-semibold" href="#">Blog</a>
+                    </li>
                 </ul>
-
-                <button class="btn text-white fw-bold login me-2" type="button">
-                    Login
-                </button>
-                <button class="btn btn-outline-secondary text-white fw-bold" type="button">
-                    Sign-up
-                </button>
+                <form class="d-flex" role="search">
+                    <button class="btn text-white fw-bold me-2" type="button">
+                        Login
+                    </button>
+                    <button class="btn btn-outline-secondary text-white fw-bold" type="submit">Sign-up</button>
+                </form>
             </div>
-        </header>
-    </div>
+        </div>
+    </nav>
     <!--hero-->
     <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row align-items-center g-5 py-5">
@@ -59,13 +67,13 @@
     </div>
     <!--    hero3-->
     <div class="container col-12 col-xxl-8 ps-4 py-2 hero3" style="background-color: aliceblue">
-        <div class="row align-items-center g-lg-5 py-5 ps-4">
+        <div class="row align-items-center g-lg-5 py-5">
             <div class="col-lg-7 text-center text-lg-start">
                 <h4 class="fw-bold lh-1 text-body-emphasis mb-3">DESCRIPTION</h4>
                 <p class="col-lg-10 fs-6">This ilearnings Webinar on 'Python Fundamentals' will help you understand the
                     various concepts you must learn in Python with examples.</p>
-                <h5 class="pt-4 mb-2">AGENDA</h5>
-                <ul>
+                <h5 class="pt-4 mb-2 agenda">AGENDA</h5>
+                <ul class="agenda">
                     <li class="pb-1 fw-semibold fs-6">Introduction to Python</li>
                     <li class="pb-1 fw-semibold fs-6"> What is Python?</li>
                     <li class="pb-1 fw-semibold fs-6">Features of Python</li>
@@ -80,7 +88,7 @@
                 </ul>
                 <div class="p-2 fw-semibold">
                     <h6>Webinar Facts</h6>
-                    <ul class="fw-normal py-3" style="border: 1.3px dashed #228ce3">
+                    <ul class="fw-normal py-3" style="border: 1px dashed #228ce3">
                         <li>Python celebrated its 30th anniversary in 2021</li>
                         <li> Python is the preferred language for new technologies such as Data Science and Machine
                             Learning.
@@ -90,7 +98,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-8 mx-auto col-lg-4 p-4" style="background-color: whitesmoke">
+            <div class="col-md-8 mx-auto col-lg-4 ps-3 p-4" style="background-color: whitesmoke">
                 <div class="faq-right p-0 mt-lg-4" id="contact-us">
                     <div class="mt-0 p-0">
                         <img alt="image" class="faq-img" height="150vh" src="./assets/Talk%20To%20Us.png" width="auto">
