--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     </nav>
     <!--hero-->
     <div class="container col-xxl-8 px-4 py-5">
+        <div class="d-flex p-2 align-item-center fw-bold intro">
+            <img alt="" src="./assets/sq-python-logo-1.png">
+            <p>Python Webinar</p></div>
         <div class="row flex-lg-row align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
                 <img alt="Bootstrap Themes" class="d-block mx-lg-auto img-fluid" height="500" loading="lazy"
