--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <button class="btn text-white fw-bold me-2" type="button">
+                    <button class="btn fw-bold login me-2" type="button">
                         Login
                     </button>
-                    <button class="btn btn-outline-secondary text-white fw-bold" type="submit">Sign-up</button>
+                    <button class="btn btn-outline-secondary login fw-bold" type="submit">Sign-up</button>
                 </form>
             </div>
         </div>
